--- a/app/src/main/res/layout/input.xml
+++ b/app/src/main/res/layout/input.xml
@@ -93,7 +93,7 @@
             app:srcCompat="@drawable/baseline_arrow_back_24" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/calculateFare"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Find Jeep"
