--- a/app/src/main/res/layout/activity_maininterface.xml
+++ b/app/src/main/res/layout/activity_maininterface.xml
@@ -3,6 +3,51 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/jeepoy_background"
-    tools:context=".MainInterface"/>
+    android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:contentDescription="@string/jeepo_background"
+        android:scaleType="centerCrop"
+        android:src="@drawable/new_jeepo_bg" />
+
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="116dp"
+        android:fontFamily="@font/antonio_bold"
+        android:shadowColor="#21796F"
+        android:shadowDx="5"
+        android:shadowDy="8"
+        android:shadowRadius="6"
+        android:text="JEEP0"
+        android:textColor="@color/white"
+        android:textSize="126sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="276dp"
+        android:fontFamily="@font/poppins_new"
+        android:letterSpacing="0.2"
+        android:shadowColor="@color/black"
+        android:shadowDx="5"
+        android:shadowDy="2"
+        android:shadowRadius="6"
+        android:text="The Ultimate Jeepney Companion!"
+        android:textColor="@color/white"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView5" />
+</androidx.constraintlayout.widget.ConstraintLayout>
