--- a/app/src/main/res/layout/history.xml
+++ b/app/src/main/res/layout/history.xml
@@ -40,7 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="710dp"
         android:layout_marginTop="52dp"
-        android:background="@color/white"
+        android:background="#D3D3D3"
         app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
         tools:layout_editor_absoluteX="0dp">
 
@@ -49,21 +49,9 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="15dp"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"
-                android:text="@string/route_date"
-                android:textAlignment="center"
-                android:textSize="14sp"
-                android:fontFamily="@font/poppins_new"/>
-
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayout3"
+                android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_border">
@@ -94,10 +82,10 @@
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.629"
+                    app:layout_constraintHorizontal_bias="0.453"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.078" />
+                    app:layout_constraintVertical_bias="0.075" />
 
                 <TextView
                     android:id="@+id/fare"
@@ -109,10 +97,10 @@
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.678"
+                    app:layout_constraintHorizontal_bias="0.478"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.638" />
+                    app:layout_constraintVertical_bias="0.645" />
 
                 <TextView
                     android:id="@+id/codeInfo"
@@ -161,6 +149,18 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/fare"
                     app:layout_constraintVertical_bias="0.0" />
+
+                <ImageView
+                    android:id="@+id/imageView6"
+                    android:layout_width="19dp"
+                    android:layout_height="19dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.959"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.097"
+                    app:srcCompat="@drawable/baseline_close_24" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
