--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -10,12 +10,49 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@string/jeepo_background"
-        android:paddingTop="15dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/jeepoy_background" />
+        android:src="@drawable/new_jeepo_bg" />
 
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="116dp"
+        android:fontFamily="@font/antonio_bold"
+        android:shadowColor="#21796F"
+        android:shadowDx="5"
+        android:shadowDy="8"
+        android:shadowRadius="6"
+        android:text="JEEP0"
+        android:textColor="@color/white"
+        android:textSize="126sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="276dp"
+        android:fontFamily="@font/poppins_new"
+        android:letterSpacing="0.2"
+        android:shadowColor="@color/black"
+        android:shadowDx="5"
+        android:shadowDy="2"
+        android:shadowRadius="6"
+        android:text="The Ultimate Jeepney Companion!"
+        android:textColor="@color/white"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView5" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="285dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -35,7 +72,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/suggest_jeep_route_image" />
+            app:srcCompat="@drawable/find_jeep" />
 
         <ImageView
             android:id="@+id/fare_calc"
@@ -58,12 +95,12 @@
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="93dp"
-            android:contentDescription="@string/travel_history"
+            android:contentDescription="@string/route_history"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/travel_history_img" />
+            app:srcCompat="@drawable/route_history" />
 
         <ImageView
             android:id="@+id/jeepneyList"
@@ -77,7 +114,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/jeepney_list_img" />
+            app:srcCompat="@drawable/jeepney_guide" />
 
         <ImageView
             android:id="@+id/commute_news"
@@ -91,9 +128,21 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/commute_news_img" />
+            app:srcCompat="@drawable/travel_update" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="51dp"
+        android:layout_height="44dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.955"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.023"
+        app:srcCompat="@drawable/baseline_info_24" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
