--- a/app/src/main/res/layout/listofjeeps.xml
+++ b/app/src/main/res/layout/listofjeeps.xml
@@ -11,6 +11,7 @@
         android:id="@+id/scrollView3"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="10dp"
         android:background="#D3D3D3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
